whatsapp checklist done

--- a/contact-us.html
+++ b/contact-us.html
@@ -282,7 +282,7 @@
                     </div>
 
                     <div class="container text-center my-3">
-                        <button type="submit" name="submit" class="btn btn-primary bg-primary py-2">Submit</button>
+                        <button type="submit" name="submit" class="btn btn-primary bg-primary py-2 square-btn">Submit</button>
                     </span>
                 </form>
             </div>
