--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
                             </ul>
                         </li>
 
+                        <!-- hidden -->
                          <!-- Industries dropdown -->
-                         <li class="nav-item dropdown ">
+                         <li class="nav-item dropdown hide">
                             <!-- solutions and services dropdown toggle -->
                             <a href="industries.html"  class="nav-link text-primary" type="link" id="industries" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               Industries
@@ -149,6 +150,7 @@
                             </ul>
                         </li>
 
+                        <li class="nav-item"><a class="nav-link text-primary" href="./industries.html">Industries</a></li>
                         <li class="nav-item"><a class="nav-link text-primary" href="./contact-us.html">Contact Us</a></li>
                     </ul>
 
@@ -371,7 +373,7 @@
     <!-- Digital solutions service end -->
 
     <!-- cloud services & IT Advisory/ consulting start -->
-    <section class="cs-it-services container">
+    <section class="cs-it-services container mt-3">
         <div class="row container">
             <!-- cloud services -->
             <div class="col-lg-4">
