--- a/products/digital.html
+++ b/products/digital.html
@@ -132,24 +132,8 @@
                             </ul>
                         </li>
 
-                         <!-- Industries dropdown -->
-                         <li class="nav-item dropdown ">
-                            <!-- solutions and services dropdown toggle -->
-                            <a href="../industries.html"  class="nav-link text-primary" type="link" id="industries" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Industries
-                            </a>
-                            <!-- solutions and services dropdown items -->
-                            <ul class="dropdown-menu multi-level text-primary mt-0" role="menu" aria-labelledby="dropdownMenu">
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#banking">Financial Services</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#retail">Retail & Customers</a class="text-primary"></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#manufacturing">Manufacturing</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#government">Public Sector</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#healthcare">Healthcare</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#education">Education</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#energy">Transportation</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#media">Media & Communications</a></li>
-                            </ul>
-                        </li>
+                        <li class="nav-item"><a class="nav-link text-primary" href="../industries.html">Industries</a></li>
+
 
                         <li class="nav-item"><a class="nav-link text-primary" href="../contact-us.html">Contact Us</a></li>
                     </ul>
@@ -168,7 +152,7 @@
             </div>
 
             <div class="col-lg-7 text d-flex align-items-end mb-3">
-                <h1 class="title text-primary">
+                <h1 class="title title-orange">
                     Digital Solutions
                 </h1>
             </div>
@@ -177,7 +161,7 @@
 
         <div class="container row py-4 mx-auto">
             <!-- left -->
-            <div class="left col-lg-5 text-right text-primary">
+            <div class="left col-lg-4 text-right text-primary px-0">
                 <h3 >
                     Effectively manage IT governance and risk while also ensuring business and regulatory compliance.
                 </h3>
@@ -187,7 +171,7 @@
             </div>
 
             <!-- right -->
-            <div class="col-lg-7 text-left">
+            <div class="col-lg-7 text-left ml-5 pl-4">
 
                 <!-- Enterprise Content Management (ECM) -->
                 <div class="service border-bottom border-secondary">
