--- a/products/digital-realestate.html
+++ b/products/digital-realestate.html
@@ -132,24 +132,8 @@
                             </ul>
                         </li>
 
-                         <!-- Industries dropdown -->
-                         <li class="nav-item dropdown ">
-                            <!-- solutions and services dropdown toggle -->
-                            <a href="../industries.html"  class="nav-link text-primary" type="link" id="industries" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Industries
-                            </a>
-                            <!-- solutions and services dropdown items -->
-                            <ul class="dropdown-menu multi-level text-primary mt-0" role="menu" aria-labelledby="dropdownMenu">
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#banking">Financial Services</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#retail">Retail & Customers</a class="text-primary"></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#manufacturing">Manufacturing</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#government">Public Sector</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#healthcare">Healthcare</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#education">Education</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#energy">Transportation</a></li>
-                                <li class="dropdown-item"><a class="text-primary" href="../industries.html#media">Media & Communications</a></li>
-                            </ul>
-                        </li>
+                        <li class="nav-item"><a class="nav-link text-primary" href="../industries.html">Industries</a></li>
+
 
                         <li class="nav-item"><a class="nav-link text-primary" href="../contact-us.html">Contact Us</a></li>
                     </ul>
