--- a/products/consulting-bigdata.html
+++ b/products/consulting-bigdata.html
@@ -34,7 +34,7 @@
     </div>
     <!-- Loader End -->
     <!-- Header Start -->
-    <header class=" w-100 bg-white container-fluid p-0">
+    <header class="sticky-top w-100 bg-white container-fluid p-0">
         <div class="">
             <!-- top header -->
             <div class=" bg-primary">
