--- a/about.html
+++ b/about.html
@@ -262,8 +262,13 @@
             <div class="row">
                 <!-- Values text -->
                 <div class="col-lg-12 text-center col-md-12 my-auto" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
-                    <div class="title">
-                        <h3 class="title-blue"> <span class="light-sans"> Our</span> <strong>Values</strong> </h3>
+                    <div class="">
+                        <div class="title">
+                            <h3 class="title-blue"> <span class="light-sans"> Our</span> <strong>Values</strong> </h3>
+                        </div>
+                        <p class="my-2">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque, voluptatem ipsam cumque sequi corrupti soluta!
+                        </p>
                     </div>
     
                     <!-- about text -->
