--- a/products/digital-crm.html
+++ b/products/digital-crm.html
@@ -35,7 +35,7 @@
     <!-- Loader End -->
     <!-- Header Start -->
     <!-- Header Start -->
-    <header class=" w-100 bg-white container-fluid p-0">
+    <header class="sticky-top w-100 bg-white container-fluid p-0">
         <div class="">
             <!-- top header -->
             <div class=" bg-primary">
