--- a/products/digital.html
+++ b/products/digital.html
@@ -152,9 +152,9 @@
             </div>
 
             <div class="col-lg-7 text d-flex align-items-end mb-3">
-                <h1 class="title title-orange">
+                <h3 class="title title-orange">
                     Digital Solutions
-                </h1>
+                </h3>
             </div>
 
         </div>
@@ -162,12 +162,12 @@
         <div class="container row py-4 mx-auto">
             <!-- left -->
             <div class="left col-lg-4 text-right text-primary px-0">
-                <h3 >
+                <h4 >
                     Effectively manage IT governance and risk while also ensuring business and regulatory compliance.
-                </h3>
-                <h3>
+                </h4>
+                <h4>
                     Quality Designs helps organisations analyze, audit and manage their governance, risk and compliance
-                </h3>
+                </h4>
             </div>
 
             <!-- right -->
@@ -177,14 +177,14 @@
                 <div class="service border-bottom border-secondary">
                     <div class="d-flex my-3" >
                         <img class="" src="../assets/images/services icons/Digital Solutions/Elcectronic Content .png" alt="">
-                        <h4 class="text-dark pl-3 my-auto">Enterprise Content Management (ECM)</h4>
+                        <h5 class="text-dark pl-3 my-auto">Enterprise Content Management (ECM)</h5>
                     </div>
 
                     <p>
                         Enterprise content management software is evolving, with solutions ranging from intelligent capture to records management and archiving, connecting information from across the enterprise with the people and systems that need it. 
                     </p>
 
-                    <div class="text-right mr-3">
+                    <div class="text-right mr-3 pb-3">
                         <a href="./digital-ecm.html" class="text-right">Read More</a>
                     </div>
                 </div>
