--- a/products/index.html
+++ b/products/index.html
@@ -189,20 +189,25 @@
     <!-- Hero End -->
 
     <!-- new services start -->
-    <section class="page-content py-2">
+    <section class="page-content pb-2">
 
         <!-- header text -->
-        <div class="border-bottom border-secondary py-3 text-center">
+        <div class="border-bottom border-primary py-3 text-center bg-grey mt-0" >
 
-            <div class="title title-orange">
-                <h3 class="title title-orange text-center">
+            <div class="title title-orange hide">
+                <h4 class="title title-orange text-center">
                     We have a wide array of services to offer our clients. <br>
                     But we can generally categorise them into three general categories
-                </h3>
+                </h4>
             </div>
 
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore facilis autem similique tenetur saepe ex. Laborum perspiciatis magni dignissimos vitae!
+            <p class="container text-dark font-weight-bold px-2 mb-0">
+                Quality Designs enables organizations to realize their business goals through an
+                array of services from strategy to operations by improving customer experience,
+                enhance business process, digital transformation and enterprise resource
+                planning. We provide services in technology consulting, custom application
+                implementation, maintenance of software and integration including IoT, AI, BI
+                and Cloud Computing.
             </p>
         </div>
 
@@ -210,8 +215,8 @@
 
         <!-- <div class="services-page container px-0 text-center"> -->
             <!-- digital services -->
-            <div class="digital-services container text-center">
-                <h2 class="title text-primary"><a href="./digital.html">Digital Services</a></h2>
+            <div class="digital-services container text-center pt-5">
+                <h4 class="title text-primary"><a href="./digital.html">Digital Services</a></h4>
                 <p>
                     Effectively manage IT governance and risk while also ensuring business and regulatory compliance. <br>
                     Quality Designs helps organisations analyze, audit and manage their governance, risk and compliance
@@ -314,7 +319,7 @@
                 </div>
 
                 <!-- row 3 -->
-                <div class="row border-bottom border-secondary">
+                <div class="row">
                     <!-- Custom Development -->
                     <div class="service col-lg-4 mt-3 mb-4">
                         <div class="d-flex ">
@@ -368,7 +373,7 @@
             <div class="cloud-services container-fluid text-center my-4 pt-4  bg-grey px-0">
                 <div class="row container mx-auto">
                     <div class="col-lg-12 text-center">
-                        <h2 class="title text-primary"><a href="./cloud_services.html">Cloud Services</a></h2>
+                        <h4 class="title text-primary"><a href="./cloud_services.html">Cloud Services</a></h4>
                         <p>
                             cloud services helps companies transform into a digital business by provideing computing resources over the internet
                         </p>
@@ -427,7 +432,7 @@
 
             <!-- consulting  -->
             <div class="consulting py-4 container text-center">
-                <h2 class="title text-primary"><a href="./consulting.html">Consulting</a></h2>
+                <h4 class="title text-primary"><a href="./consulting.html">Consulting</a></h4>
                 <p>
                     Effectively manage IT governance and risk while also ensuring business and regulatory compliance. <br>
                     Quality Designs helps organisations analyze, audit and manage their governance, risk and compliance
@@ -482,7 +487,7 @@
                 </div>
 
                 <!-- row 2 -->
-                <div class="row border-bottom border-secondary">
+                <div class="row">
                     <!-- Program Management -->
                     <div class="service col-lg-4 mt-3 mb-4">
                         <div class="d-flex ">
@@ -1179,9 +1184,9 @@
 
     <!-- grey strip -->
     <div class="services-strip industry-strip bg-dark text-white text-center py-4">
-        <h3>SPEAK TO AN EXPERT</h3>
+        <h4 class="" style="color: #FF9D00; ">SPEAK TO AN EXPERT</h4>
         <P>We'll need just a few details from you and one of our specialists will be in touch</P>
-        <a class="btn btn-primary " href="../contact-us.html#contact-form">GET IN TOUCH</a>
+        <a class="btn btn-primary bg-red px-3 py-1" style="border: unset" href="../contact-us.html#contact-form">GET IN TOUCH</a>
     </div>
     <!-- grey strip -->
     <!-- Footer Start -->
