--- a/index.html
+++ b/index.html
@@ -172,13 +172,12 @@
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
                                     <!-- short text heading -->
-                                    <h1 class="mt-0" data-aos="fade-right" data-aos-delay="200">Short Text 1
+                                    <h1 class="mt-0" data-aos="fade-right" data-aos-delay="200">One Platform. Every Process.
                                     </h1>
 
                                     <!-- brief text -->
-                                    <p data-aos="fade-right" data-aos-delay="600">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit assumenda fuga quisquam earum magni unde!
-                                        Expecting
-                                        Peoples’s predefined dummy text<br> chunks as necessary, making this the first.
+                                    <p data-aos="fade-right" data-aos-delay="600">
+                                        Empowering people to drive digital transformation
                                     </p>
 
                                     <!-- call to action buttons -->
@@ -187,23 +186,40 @@
                                 </div>
                             </div>
                             <!-- swiper / slide element end -->
-
                             <!-- swiper / slide element start -->
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
                                     <!-- short text heading -->
-                                    <h1 class="mt-0" data-aos="fade-right" data-aos-delay="200">Short Text 2
+                                    <h1 class="mt-0" data-aos="fade-right" data-aos-delay="200">Internet of things
                                     </h1>
 
                                     <!-- brief text -->
-                                    <p data-aos="fade-right" data-aos-delay="600">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit assumenda fuga quisquam earum magni unde!
-                                        Expecting
-                                        Peoples’s predefined dummy text<br> chunks as necessary, making this the first.
+                                    <p data-aos="fade-right" data-aos-delay="600">
+                                        The best way to predict the future is to design it
                                     </p>
 
                                     <!-- call to action buttons -->
-                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 3</a> -->
-                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 4</a> -->
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 1</a> -->
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 2</a> -->
+                                </div>
+                            </div>
+                            <!-- swiper / slide element end -->
+                            <!-- swiper / slide element start -->
+                            <div class="swiper-slide slide-content d-flex align-items-center">
+                                <div class="single-slide">
+                                    <!-- short text heading -->
+                                    <h1 class="mt-0" data-aos="fade-right" data-aos-delay="200">COVID-19
+                                    </h1>
+
+                                    <!-- brief text -->
+                                    <p data-aos="fade-right" data-aos-delay="600">
+                                        Helping customers navigate COVID-19, advice for managing disruption and keep
+                                        business going in the new now.
+                                    </p>
+
+                                    <!-- call to action buttons -->
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 1</a> -->
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 2</a> -->
                                 </div>
                             </div>
                             <!-- swiper / slide element end -->
@@ -249,11 +265,10 @@
 
                     <!-- about text -->
                     <p>
-                        Quality designs (QD) - a leading-edge software provider and IT services, to develop
-                        efficient and effective solutions that keep businesses one-step ahead. We offer strategy,
-                        consulting, development, support and technical services to enhance digital business,
-                        workplace productivity, and customer experience through the effective use and adoption
-                        of technology.
+                        A leading-edge software provider and dedicated to improving business
+                        performance through digital transformation. We develop effective solutions that
+                        interface with your business and technology through a successful digital
+                        transformation
                     </p>
                     <a href="about.html" class="btn btn-primary square-btn mt-0 px-3 py-1">Read More</a>
 
@@ -280,7 +295,13 @@
             <h4 class="title title-blue">Solutions and Services</h4> 
         </div>
         <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta incidunt eveniet veniam ipsa reiciendis quidem at repellat unde dolores earum, ut assumenda expedita delectus minima eius nobis beatae quod harum?
+            Quality Designs enables organizations to realize their business goals through an
+            array of services from strategy to operations by improving customer experience,
+            
+            enhance business process, digital transformation and enterprise resource
+            planning. We provide services in technology consulting, custom application
+            implementation, maintenance of software and integration including IoT, AI, BI
+            and Cloud Computing.
         </p>
     </div>
     <!-- solutions and services header -->
@@ -291,8 +312,10 @@
         <div class="container">
             <h5 class="title text-primary text-left"><a href="./products/digital.html">Digital Solutions</a></h5>
             <p class="text-secondary text-left">
-                Effectively manage IT governance and risk while also ensuring business and regulatory compliance.
-                Quality Designs helps organisations analyze, audit and manage their governance, risk and compliance
+                Quality Designs digital solutions are designed to help businesses undertake their
+                digital transformation journey. From strategic development and implementation
+                to operational support, effectively show digital transformation success to our
+                customers.
             </p>
         </div>
 
