--- a/products/digital-erp.html
+++ b/products/digital-erp.html
@@ -193,19 +193,24 @@
         <div class="container row py-4 mx-auto">
             <!-- left -->
             <div class="left col-lg-5 text-right text-primary">
-                <h3 >
-                    We deploy a single, comprehensive solution that automatically pull
-                    systems and processes together to manage business activities.
-                </h3>
+                <h4 >
+                    We can help you accelerate your business by empowering employees to make
+                    smarter decisions, transform business processes faster, and promote rapid
+                    business growth.
+                </h4>
             </div>
 
             <!-- right -->
             <div class="col-lg-7 text-left">
                     <p>
-                        Our adaptable business management solution software that handles all the
-                        resources required in the business. It does this by integrating all the information
-                        flowing through the various departments. Quality designs offer both on-premise
-                        and Cloud-based ERP.                  
+                        We deploy a single, comprehensive solution - Automatically pull systems and
+                        processes together to manage business activities. Our adaptable business
+                        management solution software that handles all the resources required in the
+                        business. It does this by integrating all the information flowing through the
+                        various departments. ERP Business Applications put flexibility and scalability at
+                        the core of your business, enabling you to start quickly, grow at your own pace,
+                        and adapt in real time. Easily tailor and extend the application to meet your
+                        unique business or industry-specific needs.                  
                     </p>
 
                     <h3 class="text-dark">Key Features and capabilities</h3>
