--- a/products/digital.html
+++ b/products/digital.html
@@ -197,7 +197,9 @@
                     </div>
 
                     <p>
-                        We deploy a single, comprehensive solution - Automatically pull systems and processes together to manage business activities.
+                        We can help you accelerate your business by empowering employees to make
+                        smarter decisions, transform business processes faster, and promote rapid
+                        business growth.
                     </p>
 
                     <div class="text-right mr-3">
